fix overflow

--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
     background-color: darkslategrey;
     font-size: 40px;
     color: #fff;
+    overflow: hidden;
 }
 
 #content {
